COP-4387 add info about restrictionAware to the changelog

--- a/changelog/2026/2026-01-28-customer.md
+++ b/changelog/2026/2026-01-28-customer.md
@@ -17,27 +17,29 @@ layout:
 
 ## Overview
 
-The `Customer` object was extended with a new `restriction` property. This property is an access control identifier that determines who can view or manage the customer.
+The `Customer` object was extended with a new `restriction` property. This property is an access control identifier that determines who can
+view or manage the customer.
 
 The `restriction` field:
+
 - Restricts customer visibility based on scope permissions
 - Users can only query and view customers whose `restriction` value matches one of their authorized restrictions
 - Modifying requires special `restriction.restriction_manage` scope permission
 
 ## New endpoints
 
-| Endpoint                                                                                                                                                                                                                                        | Description                                                                      |
-|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------|
-| [Assigning an account to an existing customer profile](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/account-and-profile#post-customer-tenant-customers-customernumber-accounts-internal) | Assigns a customer account (email) to an existing customer profile.              |
+| Endpoint                                                                                                                                                                                                                                                  | Description                                                         |
+|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------|
+| [Assigning an account to an existing customer profile](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/account-and-profile#post-customer-tenant-customers-customernumber-accounts-internal) | Assigns a customer account (email) to an existing customer profile. |
 
 ## Updated endpoints
 
-| Endpoint                                                                                                                                                                               | Description                                      |
-|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------|
-| [Creating a customer](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#post-customer-tenant-customers)         | Property `restriction` has been introduced.      |
-| [Retrieving all customers](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#get-customer-tenant-customers)     | Property `restriction` has been introduced.      |
-| [Searching for customers](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#post-customer-tenant-customers-search) | Property `restriction` has been introduced.      |
-| [Retrieving a customer](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#get-customer-tenant-customers-customernumber) | Property `restriction` has been introduced.      |
+| Endpoint                                                                                                                                                                                      | Description                                 |
+|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------|
+| [Creating a customer](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#post-customer-tenant-customers)                 | Property `restriction` has been introduced. |
+| [Retrieving all customers](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#get-customer-tenant-customers)             | Property `restriction` has been introduced. |
+| [Searching for customers](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#post-customer-tenant-customers-search)      | Property `restriction` has been introduced. |
+| [Retrieving a customer](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#get-customer-tenant-customers-customernumber) | Property `restriction` has been introduced. |
 
 ## Known problems
 
