--- a/changelog/2026/2026-01-28-order.md
+++ b/changelog/2026/2026-01-28-order.md
@@ -17,25 +17,27 @@ layout:
 
 ## Overview
 
-The `Order` object was extended with a new `restriction` property. This property is an access control identifier that determines who can view or manage the order.
+The `Order` object was extended with a new `restriction` property. This property is an access control identifier that determines who can
+view or manage the order.
 
 The `restriction` field:
+
 - Restricts order visibility based on scope permissions
 - Users can only query and view orders whose `restriction` value matches one of their authorized restrictions
 - Modifying requires special `restriction.restriction_manage` scope permission
 
 ## Updated endpoints
 
-| Endpoint                                                                                                                                                                                     | Description                                      |
-|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------|
-| [Creating a new order](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                             | Property `restriction` has been introduced.      |
-| [Retrieving orders](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders)                                 | Property `restriction` has been introduced.      |
-| [Searching for orders](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders-search)                      | Property `restriction` has been introduced.      |
-| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid)         | Property `restriction` has been introduced.      |
-| [Updating an order](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                         | Property `restriction` has been introduced.      |
-| [Partially updating an order](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#patch-order-v2-tenant-salesorders-orderid)             | Property `restriction` has been introduced.      |
-| [Retrieving a list of orders](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders)                          | Property `restriction` has been introduced.      |
-| [Retrieving order details](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)                     | Property `restriction` has been introduced.      |
+| Endpoint                                                                                                                                                                             | Description                                 |
+|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------|
+| [Creating a new order](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                     | Property `restriction` has been introduced. |
+| [Retrieving orders](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders)                         | Property `restriction` has been introduced. |
+| [Searching for orders](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders-search)              | Property `restriction` has been introduced. |
+| [Retrieving a specific order by ID](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | Property `restriction` has been introduced. |
+| [Updating an order](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)                 | Property `restriction` has been introduced. |
+| [Partially updating an order](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-tenant-managed#patch-order-v2-tenant-salesorders-orderid)     | Property `restriction` has been introduced. |
+| [Retrieving a list of orders](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders)                  | Property `restriction` has been introduced. |
+| [Retrieving order details](https://developer.emporix.io/api-references/api-guides/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | Property `restriction` has been introduced. |
 
 ## Known problems
 
