--- a/changelog/2026/2026-01-28-cart.md
+++ b/changelog/2026/2026-01-28-cart.md
@@ -17,22 +17,24 @@ layout:
 
 ## Overview
 
-The `Cart` object was extended with a new `restriction` property. This property is an access control identifier that determines who can view or manage the cart.
+The `Cart` object was extended with a new `restriction` property. This property is an access control identifier that determines who can view
+or manage the cart.
 
 The `restriction` field:
+
 - Restricts cart visibility based on scope permissions
 - Users can only query and view carts whose `restriction` value matches one of their authorized restrictions
 - Modifying requires special `restriction.restriction_manage` scope permission
 
 ## Updated endpoints
 
-| Endpoint                                                                                                                                             | Description                                      |
-|------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------|
-| [Creating a new cart](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#post-cart-tenant-carts)               | Property `restriction` has been introduced.      |
-| [Updating a cart](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#put-cart-tenant-carts-cartid)             | Property `restriction` has been introduced.      |
-| [Retrieving all carts](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#get-cart-tenant-carts)               | Property `restriction` has been introduced.      |
-| [Retrieving a cart](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid)           | Property `restriction` has been introduced.      |
-| [Searching for carts](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#post-cart-tenant-carts-search)        | Property `restriction` has been introduced.      |
+| Endpoint                                                                                                                                      | Description                                 |
+|-----------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------|
+| [Creating a new cart](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#post-cart-tenant-carts)        | Property `restriction` has been introduced. |
+| [Updating a cart](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#put-cart-tenant-carts-cartid)      | Property `restriction` has been introduced. |
+| [Retrieving all carts](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#get-cart-tenant-carts)        | Property `restriction` has been introduced. |
+| [Retrieving a cart](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid)    | Property `restriction` has been introduced. |
+| [Searching for carts](https://developer.emporix.io/api-references/api-guides/checkout/cart/api-reference/carts#post-cart-tenant-carts-search) | Property `restriction` has been introduced. |
 
 ## Known problems
 
