--- a/changelog/2026/2026-01-28-customer.md
+++ b/changelog/2026/2026-01-28-customer.md
@@ -26,12 +26,6 @@ The `restriction` field:
 - Users can only query and view customers whose `restriction` value matches one of their authorized restrictions
 - Modifying requires special `restriction.restriction_manage` scope permission
 
-## New endpoints
-
-| Endpoint                                                                                                                                                                                                                                                  | Description                                                         |
-|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------|
-| [Assigning an account to an existing customer profile](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/account-and-profile#post-customer-tenant-customers-customernumber-accounts-internal) | Assigns a customer account (email) to an existing customer profile. |
-
 ## Updated endpoints
 
 | Endpoint                                                                                                                                                                                      | Description                                 |
@@ -40,6 +34,8 @@ The `restriction` field:
 | [Retrieving all customers](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#get-customer-tenant-customers)             | Property `restriction` has been introduced. |
 | [Searching for customers](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#post-customer-tenant-customers-search)      | Property `restriction` has been introduced. |
 | [Retrieving a customer](https://developer.emporix.io/api-references/api-guides/companies-and-customers/customer-service/api-reference/customers#get-customer-tenant-customers-customernumber) | Property `restriction` has been introduced. |
+| [Upserting a customer profile](https://developer.emporix.io/api-references-1/readme/api-reference-13/account-and-profile#put-customer-tenant-customers-customernumber)                        | Property `restriction` has been introduced. |
+| [Updating a customer profile](https://developer.emporix.io/api-references-1/readme/api-reference-13/account-and-profile#patch-customer-tenant-customers-customernumber)                       | Property `restriction` has been introduced. |
 
 ## Known problems
 
