COP-4376 review improvements

--- a/changelog/2026/2026-01-28-quote.md
+++ b/changelog/2026/2026-01-28-quote.md
@@ -28,13 +28,14 @@ The `restriction` field:
 
 ## Updated endpoints
 
-| Endpoint                                                                                                                                                           | Description                                 |
-|--------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------|
-| [Creating a quote](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#post-quote-tenant-quotes)                    | Property `restriction` has been introduced. |
-| [Retrieving quotes](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes)                    | Property `restriction` has been introduced. |
-| [Retrieving a single quote](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes-quoteid)    | Property `restriction` has been introduced. |
+| Endpoint                                                                                                                                                          | Description                                 |
+|-------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------|
+| [Creating a quote](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#post-quote-tenant-quotes)                   | Property `restriction` has been introduced. |
+| [Retrieving quotes](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes)                   | Property `restriction` has been introduced. |
+| [Retrieving a single quote](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes-quoteid)   | Property `restriction` has been introduced. |
 | [Partially updating a quote](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#patch-quote-tenant-quotes-quoteid) | Property `restriction` has been introduced. |
 | [Partially updating a quote](https://developer.emporix.io/api-references/api-guides/quotes/quote/api-reference/quote-management#patch-quote-tenant-quotes-quoteid) | Property `restriction` has been introduced. |
+| [Retrieving quote history](https://developer.emporix.io/api-references-1/readme/api-reference-28/quote-history#get-quote-tenant-quotes-quoteid-history) | Property `restriction` has been introduced. |
 
 ## Known problems
 
