COP-4570 updates sdk changelog and toc

--- a/changelog/2026/2026-02-12-sdk.md
+++ b/changelog/2026/2026-02-12-sdk.md
@@ -13,13 +13,13 @@ layout:
     visible: true
 ---
 
-# 2026-02-12: Emporix SDK - add restrictions support
+# 2026-02-12: Emporix SDK - restrictions support
 
 ## Overview
 
-A new version of the Emporix SDK has been released `1.1.1` with the following changes:
-Added `restrictions` support to the `Emporix SDK`
-Fixed a bug related to `deliveryWindowValidations` incorrect client path.
+A new `1.1.1` version of the Emporix SDK has been released with the following changes:
+* added `restrictions` support to the `Emporix SDK`
+* fixed a bug related to `deliveryWindowValidations` incorrect client path
 
 ## Updated types
 
@@ -35,5 +35,5 @@ Fixed a bug related to `deliveryWindowValidations` incorrect client path.
 | LegalEntityCommonDto               | Property `restrictions` has been introduced. |
 
 ## Known problems
-All args constructors require the new parameters. Use builders to avoid breaking changes in the future.
+All args constructors require the new parameters. Use the builders to avoid breaking changes in the future.
 
