--- a/changelog/2026/2026-02-12-sdk.md
+++ b/changelog/2026/2026-02-12-sdk.md
@@ -1,5 +1,5 @@
 ---
-icon: sparkles
+icon: wand-sparkles
 layout:
   title:
     visible: true
@@ -18,6 +18,7 @@ layout:
 ## Overview
 
 A new `1.1.1` version of the Emporix SDK has been released with the following changes:
+
 * added `restrictions` support to the `Emporix SDK`
 * fixed a bug related to `deliveryWindowValidations` incorrect client path
 
