changelog updated sdk

--- a/changelog/2026/2026-02-12-sdk.md
+++ b/changelog/2026/2026-02-12-sdk.md
@@ -19,8 +19,8 @@ layout:
 
 A new `1.1.1` version of the Emporix SDK has been released with the following changes:
 
-* added `restrictions` support to the `Emporix SDK`
-* fixed a bug related to `deliveryWindowValidations` incorrect client path
+* support for the `restrictions` 
+* fixes to the `deliveryWindowValidations` client path
 
 ## Updated types
 
